# KhutbahEditor

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  electron-builder.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: CONTRIBUTING.md  INSTALL.md  (+4 more)
python-pipeline/: khutbah_pipeline.spec  pyproject.toml  pytest.ini
python-pipeline/khutbah_pipeline/: __main__.py  rpc.py  run_full.py
python-pipeline/khutbah_pipeline/align/: crosscorr.py
python-pipeline/khutbah_pipeline/detect/: candidates.py  confidence.py  normalize_arabic.py  phrases.py  pipeline.py  pipeline_v2.py  shots.py  silence.py  transcribe.py  vad.py  window_transcribe.py
python-pipeline/khutbah_pipeline/edit/: filmstrip.py  loudnorm.py  mux.py  proxy.py  smartcut.py  thumbnail.py  waveform.py
python-pipeline/khutbah_pipeline/ingest/: local.py  youtube.py
python-pipeline/scripts/: bench_pipeline.py  debug_anchors.py  e2e_canonical.py
python-pipeline/tests/: test_av_consensus.py  test_candidates.py  test_confidence.py  test_crosscorr.py  test_gpu.py  test_gpu_probe.py  test_ingest_local.py  test_ingest_youtube.py  test_keyframes.py  test_loudnorm.py  test_normalize_arabic.py  test_phrases.py  test_pipeline_unit.py  test_pipeline_v2.py  test_proxy.py  test_rpc.py  test_run_full.py  test_shots.py  test_silence.py  test_smartcut.py  test_smartcut_keyframe.py  test_thumbnail.py  test_upload.py  test_vad.py  test_waveform.py  test_window_transcribe.py
(+106 files in other folders)
