[project]
name = "khutbah-pipeline"
version = "0.1.0"
description = "KhutbahEditor Python sidecar"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "google-api-python-client>=2.120",
    "google-auth>=2.28",
    "google-auth-oauthlib>=1.2",
    "yt-dlp>=2024.4.9",
    "ffmpeg-python>=0.2",
    "silero-vad>=5.1",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.5",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["khutbah_pipeline*"]
